--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav></nav>
-    <div class="main-container"></div>
+    <nav>
+        <div class="nav-left">
+            <h3 class="logo">My Logo</h3>
+        </div>
+        <div class="nav-right">
+            <img src="src/img/Union.png" alt="des-menu">
+        </div>
+    </nav>
+    <div class="main-container">
+        
+    </div>
 </body>
 </html>
