--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
             <p>LET'S CONNECT</p>
         </div>
         <ul class="media-icon">
-            <a href="" class="icon1"><img src="src/img/icons/Vector.png" alt="Twitter"></a>
-            <a href="" class="icon2"><img src="src/img/icons/Linkedin icon.png" alt="Linkedin"></a>
-            <a href="" class="icon3"><img src="src/img/icons/Vector (1).png" alt="icon3"></a>
-            <a href="" class="icon4"><img src="src/img/icons/Vector (2).png" alt="icon4"></a>
-            <a href="" class="icon5"><img src="src/img/icons/Vector (3).png" alt="icon5"></a>
+            <li><a href="" class="icon1"><img src="src/img/icons/Vector.png" alt="Twitter"></a></li>
+            <li><a href="" class="icon2"><img src="src/img/icons/Linkedin icon.png" alt="Linkedin"></a></li>
+            <li><a href="" class="icon3"><img src="src/img/icons/Vector (1).png" alt="icon3"></a></li>
+            <li><a href="" class="icon4"><img src="src/img/icons/Vector (2).png" alt="icon4"></a></li>
+            <li><a href="" class="icon5"><img src="src/img/icons/Vector (3).png" alt="icon5"></a></li> 
         </ul>
     </section>
 </body>
