--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </section>
     </div>
-    <div class="works-container">
+    <section class="works-container">
         <div class="card-container">
             <header class="thumbnail">
                 <img src="src/img/Snapshoot.png" alt="tonic1">
@@ -49,11 +49,11 @@
                 <div class="card-text">
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
-                <div class="languages">
-                    <a href="" class="btn">HTML</a>
-                    <a href="" class="btn">CSS</a>
-                    <a href="" class="btn">JavaScript</a>
-                </div>
+                <ul class="languages">
+                    <li><a href="" class="btn">HTML</a></li>
+                    <li><a href="" class="btn">CSS</a></li>
+                    <li><a href="" class="btn">JavaScript</a></li>
+                </ul>
                 <div class="project-link">
                     <a href="" class="btn2">See Project</a>
                 </div>
@@ -73,11 +73,11 @@
                 <div class="card-text">
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
-                <div class="languages">
-                    <a href="" class="btn">HTML</a>
-                    <a href="" class="btn">CSS</a>
-                    <a href="" class="btn">JavaScript</a>
-                </div>
+                <ul class="languages">
+                    <li><a href="" class="btn">HTML</a></li>
+                    <li><a href="" class="btn">CSS</a></li>
+                    <li><a href="" class="btn">JavaScript</a></li>
+                </ul>
                 <div class="project-link">
                     <a href="" class="btn2">See Project</a>
                 </div>
@@ -97,11 +97,11 @@
                 <div class="card-text">
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
-                <div class="languages">
-                    <a href="" class="btn">HTML</a>
-                    <a href="" class="btn">CSS</a>
-                    <a href="" class="btn">JavaScript</a>
-                </div>
+                <ul class="languages">
+                    <li><a href="" class="btn">HTML</a></li>
+                    <li><a href="" class="btn">CSS</a></li>
+                    <li><a href="" class="btn">JavaScript</a></li>
+                </ul>
                 <div class="project-link">
                     <a href="" class="btn2">See Project</a>
                 </div>
@@ -121,25 +121,25 @@
                 <div class="card-text">
                     <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 </div>
-                <div class="languages">
-                    <a href="" class="btn">HTML</a>
-                    <a href="" class="btn">CSS</a>
-                    <a href="" class="btn">JavaScript</a>
-                </div>
+                <ul class="languages">
+                    <li><a href="" class="btn">HTML</a></li>
+                    <li><a href="" class="btn">CSS</a></li>
+                    <li><a href="" class="btn">JavaScript</a></li>
+                </ul>
                 <div class="project-link">
                     <a href="" class="btn2">See Project</a>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="about-section">
+    </section>
+    <section class="about-section">
         <section class="cont-about">
             <div class="about-myself">
-                <h1 class="about-title">About Myself</h1>
+                <h2 class="about-title">About Myself</h2>
                 <p>Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
             </div>
             <div class="connect">
-                <p>LET'S CONNECT</p>
+                <h2>LET'S CONNECT</h2>
             </div>
             <ul class="media-icon2">
                 <li><a href="" class="icon4"><img src="src/img/icons/Vector (2).png" alt="icon4"></a></li>
@@ -152,36 +152,36 @@
                 <a href="" class="btn3">Get my resume</a>
             </div>
         </section>
-        <div class="bottom-menus">
-            <div class="languages-menu">
+        <ul class="bottom-menus">
+            <li class="languages-menu">
                 <div class="languages-des">
                     <h3>Languages</h3>
                     <img src="src/img/icons/chevron-down-regular-24.png" alt="des 1">
                 </div>
-                <div class="languages-box">
-                    <div class="javascript-box">
+                <ul class="languages-box">
+                    <li class="javascript-box">
                         <img src="src/img/icons/Ellipse 1.png" alt="JS-Icon">
                         <p>JavaScript</p>
-                    </div>
-                    <div class="html-box">
+                    </li>
+                    <li class="html-box">
                         <img src="src/img/icons/Ellipse 1 (1).png" alt="HTML-Icon">
                         <p>HTML</p>
-                    </div>
-                    <div class="css-box">
+                    </li>
+                    <li class="css-box">
                         <img src="src/img/icons/Ellipse 1 (2).png" alt="CSS-Icon">
                         <p>CSS</p>
-                    </div>
-                </div>
-            </div>
-            <div class="frameworks-menu">
+                    </li>
+                </ul>
+            </li>
+            <li class="frameworks-menu">
                 <h3>Frameworks</h3>
                 <img src="src/img/icons/chevron-right-regular-24.png" alt="des 2">
-            </div>
-            <div class="skills-menu">
+            </li>
+            <li class="skills-menu">
                 <h3>Skills</h3>
                 <img src="src/img/icons/chevron-right-regular-24.png" alt="des 2">
-            </div>
-        </div>
-    </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
