Add contact section_html file

--- a/index.html
+++ b/index.html
@@ -183,5 +183,33 @@
             </li>
         </ul>
     </section>
+    <section>
+        <div class="contact-title">
+            <h2>Contact me</h2>
+        </div>
+        <div class="contact-text">
+            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                I’d love to help with it!</p>
+        </div>
+        <form action="">
+            <ul>
+                <li>
+                    <label for="name"></label>
+                    <input type="text" name="user_name" id="name">
+                </li>
+                <li>
+                    <label for="mail"></label>
+                    <input type="mail" name="user_name" id="mail">
+                </li>
+                <li>
+                    <label for="msg"></label>
+                    <textarea name="user_message" id="msg" cols="30" rows="10"></textarea>
+                </li>
+                <li>
+                    <button>Get in touch</button>
+                </li>
+            </ul>
+        </form>
+    </section>
 </body>
 </html>
