--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             </li>
         </ul>
     </section>
-    <section>
+    <section class="contact-section">
         <div class="contact-title">
             <h2>Contact me</h2>
         </div>
