add classes in html file-contact section

--- a/index.html
+++ b/index.html
@@ -188,24 +188,24 @@
             <h2>Contact me</h2>
         </div>
         <div class="contact-text">
-            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
-                I’d love to help with it!</p>
+            <span>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                I’d love to help with it!</span>
         </div>
-        <form action="">
+        <form action="https://formspree.io/f/mdovrwgl" method="post">
             <ul>
-                <li>
+                <li class="input-box">
                     <label for="name"></label>
-                    <input type="text" name="user_name" id="name">
+                    <input type="text" name="user_name" id="name" placeholder="Name">
                 </li>
-                <li>
+                <li class="input-box"> 
                     <label for="mail"></label>
-                    <input type="mail" name="user_name" id="mail">
+                    <input type="mail" name="user_name" id="mail" placeholder="example@mail.com">
                 </li>
-                <li>
+                <li class="input-box">
                     <label for="msg"></label>
-                    <textarea name="user_message" id="msg" cols="30" rows="10"></textarea>
+                    <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..."></textarea>
                 </li>
-                <li>
+                <li class="button">
                     <button>Get in touch</button>
                 </li>
             </ul>
