--- a/index.html
+++ b/index.html
@@ -188,22 +188,22 @@
             <h2>Contact me</h2>
         </div>
         <div class="contact-text">
-            <span>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
-                I’d love to help with it!</span>
+            <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                I’d love to help with it!</p>
         </div>
         <form action="https://formspree.io/f/mdovrwgl" method="post">
             <ul>
                 <li class="input-box">
                     <label for="name"></label>
-                    <input type="text" name="user_name" id="name" placeholder="Name">
+                    <input type="text" name="user_name" id="name" placeholder="Name" required maxlength="30"/>
                 </li>
                 <li class="input-box"> 
                     <label for="mail"></label>
-                    <input type="mail" name="user_name" id="mail" placeholder="example@mail.com">
+                    <input type="email" name="user_name" id="mail" placeholder="example@mail.com" required/>
                 </li>
                 <li class="input-box">
                     <label for="msg"></label>
-                    <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..."></textarea>
+                    <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..." required maxlength="500"></textarea>
                 </li>
                 <li class="button">
                     <button>Get in touch</button>
