Update html & css on mobile version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
             <nav>
                 <div class="nav-right">
-                    <img src="src/img/Union.png" alt="des-menu" class="menu">
+                    <img src="src/img/Union.svg" alt="des-menu" class="menu">
                 </div>
             </nav>
         </header>
@@ -42,7 +42,7 @@
     <section class="works-container grid">
         <div class="card-container">
             <header class="thumbnail">
-                <img src="src/img/Snapshoot.png" alt="tonic1">
+                <img src="src/img/Snapshoot Portfolio-2.svg" alt="tonic1">
             </header>
             <div class="card">
                 <h2>Tonic</h2>
@@ -66,7 +66,7 @@
         </div>
         <div class="card-container">
             <header class="thumbnail">
-                <img src="src/img/Snapshoot2.png" alt="multi-post1">
+                <img src="src/img/Snapshoot Portfolio-3.svg" alt="multi-post1">
             </header>
             <div class="card">
                 <h2>Multi-Post Stories</h2>
@@ -90,7 +90,7 @@
         </div>
         <div class="card-container">
             <header class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio (2).png" alt="tonic2">
+                <img src="src/img/Snapshoot Portfolio.svg" alt="tonic2">
             </header>
             <div class="card">
                 <h2>Tonic</h2>
@@ -114,7 +114,7 @@
         </div>
         <div class="card-container">
             <header class="thumbnail">
-                <img src="src/img/Snapshoot3.png" alt="multi-post2">
+                <img src="src/img/Snapshoot Portfolio-1.svg" alt="multi-post2">
             </header>
             <div class="card">
                 <h2>Multi-Post Stories</h2>
@@ -188,35 +188,37 @@
             </li>
         </ul>
     </section>
-    <section class="contact-section grid">
-        <div class="contact-text-section">
-            <div class="contact-title">
-                <h4>Contact me</h4>
+    <div class="background-section">
+        <section class="contact-section grid">
+            <div class="contact-text-section">
+                <div class="contact-title">
+                    <h4>Contact me</h4>
+                </div>
+                <div class="contact-text">
+                    <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
+                        I’d love to help with it!</p>
+                </div>
             </div>
-            <div class="contact-text">
-                <p>If you have an application you are interested in developing, a feature that you need built or a project that needs coding. 
-                    I’d love to help with it!</p>
-            </div>
-        </div>
-        <form action="https://formspree.io/f/mdovrwgl" method="post">
-            <ul class="grid">
-                <li class="input-box">
-                    <label for="name"></label>
-                    <input type="text" name="user_name" id="name" placeholder="Name" required maxlength="30"/>
-                </li>
-                <li class="input-box"> 
-                    <label for="mail"></label>
-                    <input type="email" name="user_name" id="mail" placeholder="example@mail.com" required/>
-                </li>
-                <li class="input-box">
-                    <label for="msg"></label>
-                    <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..." required maxlength="500"></textarea>
-                </li>
-                <li class="button">
-                    <button>Get in touch</button>
-                </li>
-            </ul>
-        </form>
-    </section>
+            <form action="https://formspree.io/f/mdovrwgl" method="post">
+                <ul>
+                    <li class="input-box">
+                        <label for="name"></label>
+                        <input type="text" name="user_name" id="name" placeholder="Name" required maxlength="30"/>
+                    </li>
+                    <li class="input-box"> 
+                        <label for="mail"></label>
+                        <input type="email" name="user_name" id="mail" placeholder="example@mail.com" required/>
+                    </li>
+                    <li class="input-box">
+                        <label for="msg"></label>
+                        <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..." required maxlength="500"></textarea>
+                    </li>
+                    <li class="button">
+                        <button>Get in touch</button>
+                    </li>
+                </ul>
+            </form>
+        </section>
+    </div>
 </body>
 </html>
