--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <div class="mobile-main">
-        <header class="flex-div grid">
+        <header class= "flex-div grid">
             <a><h3 class="logo">My Logo</h3></a>
             <ul class="button-tags">
                 <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#about"></a>About</li>
-                <li><a href="#contact"></a>Contact</li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
             <nav>
                 <div class="nav-right">
@@ -39,12 +39,12 @@
             </ul>
         </section>
     </div>
-    <section class="works-container grid">
-        <div class="card-container">
-            <header class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-2.svg" alt="tonic1">
-            </header>
-            <div class="card">
+    <section class="works-container grid" id="portfolio">
+        <div id="container-card" class="grid">
+            <div class="thumbnail">
+                <img src="src/img/Snapshoot Portfolio-2.svg" alt="tonic1" class="item-1">
+            </div>
+            <div class="card1">
                 <h2>Tonic</h2>
                 <ul class="info-card">
                     <li class="canopy"><h3>CANOPY</h3></li>
@@ -64,11 +64,11 @@
                 </div>
             </div>
         </div>
-        <div class="card-container">
-            <header class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-3.svg" alt="multi-post1">
-            </header>
-            <div class="card">
+        <div id="container-card" class="grid">
+            <div class="thumbnail">
+                <img src="src/img/Snapshoot Portfolio-3.svg" alt="multi-post1" class="item-2">
+            </div>
+            <div class="card2">
                 <h2>Multi-Post Stories</h2>
                 <ul class="info-card">
                     <li class="canopy"><h3>CANOPY</h3></li>
@@ -88,11 +88,11 @@
                 </div>
             </div>
         </div>
-        <div class="card-container">
-            <header class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio.svg" alt="tonic2">
-            </header>
-            <div class="card">
+        <div id="container-card" class="grid">
+            <div class="thumbnail">
+                <img src="src/img/Snapshoot Portfolio.svg" alt="tonic2" class="item-1">
+            </div>
+            <div class="card1">
                 <h2>Tonic</h2>
                 <ul class="info-card">
                     <li class="canopy"><h3>CANOPY</h3></li>
@@ -112,11 +112,11 @@
                 </div>
             </div>
         </div>
-        <div class="card-container">
-            <header class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-1.svg" alt="multi-post2">
-            </header>
-            <div class="card">
+        <div id="container-card" class="grid">
+            <div class="thumbnail">
+                <img src="src/img/Snapshoot Portfolio-1.svg" alt="multi-post2" class="item-2">
+            </div>
+            <div class="card2">
                 <h2>Multi-Post Stories</h2>
                 <ul class="info-card">
                     <li class="canopy"><h3>CANOPY</h3></li>
@@ -137,13 +137,13 @@
             </div>
         </div>
     </section>
-    <section class="about-section grid">
+    <section class="about-section grid" id="about">
         <section class="cont-about">
             <div class="about-myself">
                 <h2 class="about-title">About Myself</h2>
                 <p>Hello I’m a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hesitate to contact me.</p>
             </div>
-            <div class="connect">
+            <div class="connect2">
                 <p>LET'S CONNECT</p>
             </div>
             <ul class="media-icon2 grid">
@@ -189,7 +189,7 @@
         </ul>
     </section>
     <div class="background-section">
-        <section class="contact-section grid">
+        <section id="contact" class="contact-section grid">
             <div class="contact-text-section">
                 <div class="contact-title">
                     <h4>Contact me</h4>
