--- a/index.html
+++ b/index.html
@@ -202,16 +202,13 @@
             <form action="https://formspree.io/f/mdovrwgl" method="post">
                 <ul>
                     <li class="input-box">
-                        <label for="name"></label>
-                        <input type="text" name="user_name" id="name" placeholder="Name" required maxlength="30"/>
+                        <input type="text" aria-label="user_name" name="user_name" id="name" placeholder="Name" required maxlength="30"/>
                     </li>
                     <li class="input-box"> 
-                        <label for="mail"></label>
-                        <input type="email" name="user_name" id="mail" placeholder="example@mail.com" required/>
+                        <input type="email" aria-label="email" name="user_name" id="mail" placeholder="example@mail.com" required/>
                     </li>
                     <li class="input-box">
-                        <label for="msg"></label>
-                        <textarea name="user_message" id="msg" cols="30" rows="10" placeholder="Write your message here..." required maxlength="500"></textarea>
+                        <textarea name="user_message" aria-label="msg" id="msg" cols="30" rows="10" placeholder="Write your message here..." required maxlength="500"></textarea>
                     </li>
                     <li class="button">
                         <button>Get in touch</button>
