--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Portfolio - Jhonatan Caamal Erosa</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,7 +18,7 @@
             </ul>
             <nav>
                 <div class="nav-right">
-                    <img src="src/img/Union.svg" alt="des-menu" class="menu">
+                    <img src="src/img/Union.svg" alt="navbar-menu" class="menu"> <!--alt1-->
                 </div>
             </nav>
         </header>
@@ -42,7 +42,7 @@
     <section class="works-container grid" id="portfolio">
         <div id="container-card" class="grid">
             <div class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-2.svg" alt="tonic1" class="item-1">
+                <img src="src/img/Snapshoot Portfolio-2.svg" alt="Project-1" class="item-1">
             </div>
             <div class="card1">
                 <h2>Tonic</h2>
@@ -66,7 +66,7 @@
         </div>
         <div id="container-card" class="grid">
             <div class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-3.svg" alt="multi-post1" class="item-2">
+                <img src="src/img/Snapshoot Portfolio-3.svg" alt="Project-2" class="item-2">
             </div>
             <div class="card2">
                 <h2>Multi-Post Stories</h2>
@@ -90,7 +90,7 @@
         </div>
         <div id="container-card" class="grid">
             <div class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio.svg" alt="tonic2" class="item-1">
+                <img src="src/img/Snapshoot Portfolio.svg" alt="Project-3" class="item-1">
             </div>
             <div class="card1">
                 <h2>Tonic</h2>
@@ -114,7 +114,7 @@
         </div>
         <div id="container-card" class="grid">
             <div class="thumbnail">
-                <img src="src/img/Snapshoot Portfolio-1.svg" alt="multi-post2" class="item-2">
+                <img src="src/img/Snapshoot Portfolio-1.svg" alt="Project-4" class="item-2">
             </div>
             <div class="card2">
                 <h2>Multi-Post Stories</h2>
